fixed mastodon post too wide on desktop

--- a/_sass/desktop.scss
+++ b/_sass/desktop.scss
@@ -185,4 +185,7 @@
     font-size: 3.5rem;
   }
   .mastodon-post-date{display: block !important;}
+  .homepage-mastodon-post {
+    max-width: 50vw !important;
+  }
 }
